fix: Fix overflowing images

--- a/neighborhood_map/static/style/style.css
+++ b/neighborhood_map/static/style/style.css
@@ -69,6 +69,10 @@ ul {
 	width: 100%;
 }
 
+.event.description img {
+	width: 100%;
+}
+
 .go-back {
 	padding: 5px 0;
 }
